@@ -4,6 +4,8 @@
 	* Updated Access Filter Plugin to version 1.1.0, brings extended access check support
 	* Changed the install Solr script to get the access filter from the new location
 	* Changed the Access Filter Plugin status report to use Solr's plugin information request handler
+	* Updated schema.xml version to "link" it to the 1.5.0 version of the extension
+	* Changed schema.xml access field default value to "c:0"
 
 2010-09-15  Ingo Renner  <ingo.renner@dkd.de>
 
